[gd_scene load_steps=2 format=2]

[ext_resource path="res://libs/gt_pollable_area_2d/gt_pollable_area_2d.gd" type="Script" id=1]

[node name="PollableArea2D" type="Area2D"]
script = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
